--- a/index.html
+++ b/index.html
@@ -9,33 +9,33 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo"><img src="Dzine logo (2).png"></div>
+      <div class="logo">
+        <img src="Dzine logo (2).png" alt="Dzine Logo">
+      </div>
+      <button class="menu-toggle">☰</button>
       <ul class="menu">
-        <li class="home"><b><a href="index.html">Home</a></b></li>
+        <li class="home"><a href="index.html">Home</a></li>
         <li class="dropdown gallery">
-          <b><a href="#gallery">Gallery</a></b>
+          <a href="#gallery">Gallery</a>
           <ul class="dropdown-menu">
             <li><a href="product.html">Product</a></li>
             <li><a href="Ilustration.html">Illustrations</a></li>
             <li><a href="manipulation.html">Manipulation</a></li>
           </ul>
         </li>
-        <li class="about"><b><a href="about.html">About</a></b></li>
-        <li class="contact"><b><a href="contact.html">Contact</a></b></li>
+        <li class="about"><a href="about.html">About</a></li>
+        <li class="contact"><a href="contact.html">Contact</a></li>
       </ul>
-      
-      <button class="hire-btn"><b>Follow</b></button>
+      <button class="hire-btn">Follow</button>
     </nav>
   </header>
   <main>
     <section class="hero">
       <div class="logo-container">
         <img src="Dzine logo.png" alt="Dzine Logo" class="logo-image">
-        <br>
-        <img src="web.png" alt="" class="gra">
+        <img src="web.png" alt="Graphic Design" class="gra">
       </div>
-
-        </section>
+    </section>
   </main>
 </body>
 </html>
