--- a/index.html
+++ b/index.html
@@ -41,4 +41,15 @@
         </section>
   </main>
 </body>
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const hamburger = document.querySelector(".hamburger");
+    const menu = document.querySelector(".menu");
+
+    hamburger.addEventListener("click", () => {
+      menu.classList.toggle("active");
+    });
+  });
+</script>
+
 </html>
