--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@
     <button class="hire-btn">Follow</button>
     <!-- Hamburger Menu for Mobile -->
     <button class="hamburger" aria-label="Toggle navigation">
-      ☰
+      ☰ <ul class="menu">
+      <li class="home"><a href="index.html">Home</a></li>
+      <li class="dropdown gallery">
+        <a href="#gallery">Gallery</a>
+        <ul class="dropdown-menu">
+          <li><a href="product.html">Product</a></li>
+          <li><a href="Ilustration.html">Illustrations</a></li>
+          <li><a href="manipulation.html">Manipulation</a></li>
+        </ul>
+      </li>
+      <li class="about"><a href="about.html">About</a></li>
+      <li class="contact"><a href="contact.html">Contact</a></li>
+    </ul>
     </button>
   </nav>
 </header>
