--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li class="contact"><b><a href="contact.html">Contact</a></b></li>
       </ul>
       
-      <button class="hire-btn"><b>Follow</b></button>
+      <button class="hire-btn"><a href="https://www.instagram.com/sohel_dzine?igsh=NzhpN2ZuMHFsNnhr"><b>Follow</b></a></button>
     </nav>
   </header>
   <main>
