--- a/index.html
+++ b/index.html
@@ -37,5 +37,18 @@
 
         </section>
   </main>
+   <script>
+      let menuList = document.querySelector(".navbar");
+      menuList.style.maxHeight = "0px";
+
+      function toggleMenu() {
+          if (menuList.style.maxHeight == "0px") {
+              menuList.style.maxHeight = "300px";
+          } else {
+              menuList.style.maxHeight = "0px";
+          }
+      }
+  </script>
+  <script src="https://kit.fontawesome.com/f8e1a90484.js" crossorigin="anonymous"></script>
 </body>
 </html>
