--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       
       <button class="hire-btn"><a href="https://www.instagram.com/sohel_dzine?igsh=NzhpN2ZuMHFsNnhr"><b>Follow</b></a></button>
     </nav>
+    <div class="menu-icon">
+          <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
+      </div>
   </header>
   <main>
     <section class="hero">
